# vexingz3

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  superopt.py  venv  vexexample.py
.github/workflows/: ci.yml
vexingz3/: __main__.py  interpreter.py  runner.py  vexing_dump.py  vexz3.py
vexingz3/test/: test_c_division.py  test_interpreter.py  test_runner.py  test_z3.py
