[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vexingz3"
version = "0.1.0"
description = "VEX instruction interpreter"
authors = [{name = "VexingZ3 Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyvex>=9.2.0",
    "archinfo>=9.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["vexingz3/test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = ["vexingz3*"]
exclude = ["vexingz3.test*"]